# ShardedNAS

./: .gitignore
client/: Cargo.toml
client/src/: config.rs  main.rs  network.rs  packet.rs  protocol.rs  utils.rs
server/: Cargo.toml
server/nas/: config.json
server/src/: config.rs  main.rs  network.rs  packet.rs  protocol.rs  storage.rs  utils.rs
