[package]
name = "sharded-nas-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
# tokio = { version = "1", features = ["full"] }
ordinalizer = { git = "https://github.com/terrarier2111/ordinalize/" }
anyhow = "1"
bytes = "1"
swap_it = { git = "https://github.com/terrarier2111/SwapEbr" }
clitty = { git = "https://github.com/terrarier2111/CLItty" }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"