[package]
name = "sharded-nas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bidiff = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
ordinalizer = { git = "https://github.com/terrarier2111/ordinalize/" }
anyhow = "1"
bytes = "1"
swap_it = { git = "https://github.com/terrarier2111/SwapEbr" }
clitty = { git = "https://github.com/terrarier2111/CLItty" }
rand = "0.8"
#ring = "0.17"
blake3 = "1"
rsa = { version = "0.9", features = ["sha2"] }